# tcc-2026-software

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  data.db  resources.qrc  vcpkg.json
.cache/clangd/index/: main.cpp.97F21C39711F6003.idx
src/: main.cpp
src/database/: Database.cpp  Database.h  DatabaseSeeder.cpp  DatabaseSeeder.h  TestDatabaseSeeder.cpp
src/presenter/: OptimizationTablePresenter.h
src/repository/: ClientRepository.cpp  ClientRepository.h  MoldRepository.cpp  MoldRepository.h  OperatorRepository.cpp  OperatorRepository.h  OptimizationConfigRepository.cpp  OptimizationConfigRepository.h  OrderRepository.cpp  OrderRepository.h  ProductionAllocationRepository.cpp  ProductionAllocationRepository.h
src/ui/buttons/: Button.h  ExportButton.h
src/ui/dialogs/: EditMoldFormDialog.h  EditOrderFormDialog.h  FormDialog.h  MoldFormDialog.h  MultipleOrderDialog.h  OptimizationFormDialog.h  PersonalizeFormDialog.h  ProductionFormDialog.h
src/ui/forms/: Form.h
src/ui/sections/: Section.h  SectionClients.h  SectionMolds.h  SectionOptimization.h  SectionOrders.h
src/ui/tables/: Table.h  TableOptimization.h  TableSimple.h
src/view/buttons/: DialogButton.h  ExportButton.h
src/view/dialogs/: ClientFormDialog.h  EditClientFormDialog.h  EditMoldFormDialog.h  EditOperatorFormDialog.h  FormDialog.h  MoldFormDialog.h  OperatorFormDialog.h  OptimizationFormDialog.h  OrderFormDialog.h
src/view/sections/: OptimizationSection.h  SectionClients.h  SectionMolds.h  SectionOperators.h
src/view/tables/: Table.h  TableSimple.h
src/view/tables/optimizationTable/: JobCardWidget.h  NotAllocatedsTable.h  OptimizationCellWidget.h  OptimizationTable.h
src/viewModel/: OptimizationTableViewModel.h
styles/: global.qss
